Refactored event store to return results